# lightweight-fgpe-server

./: Cargo.toml  README.md
.github/workflows/: build.yml
db/: db_table_creation_script.sql  local_db_backup.sql
src/: api.rs  cli.rs  errors.rs  lib.rs  main.rs  model.rs  payloads.rs  response.rs  schema.rs
src/api/: editor.rs  helper.rs  model.rs  student.rs  teacher.rs  utils.rs
src/model/: editor.rs  student.rs  teacher.rs
src/payloads/: editor.rs  student.rs  teacher.rs
tests/: editor_api.rs  student_api.rs  teacher_api.rs
tests/helpers/: mod.rs
