[package]
name = "lightweight-fgpe-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-keycloak-auth = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = {  version = "4.5.32", features = ["derive"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.8", features = ["chrono", "postgres"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"