[package]
name = "lightweight-fgpe-server"
version = "1.0.0"
edition = "2024"
authors = ["Wiktor Przetacznik <wiktorprzetacznik@outlook.com>"]
description = "A lightweight, fast and reliable FGPE backend providing connection between database and clients."

[dependencies]
anyhow = "1.0.97"
axum = "0.8.3"
axum-keycloak-auth = "0.8.2"
bigdecimal = { version = "0.4.8", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = {  version = "4.5.36", features = ["derive", "env"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.9", features = ["chrono", "postgres", "serde_json", "numeric"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"